<resources>
    <string name="app_name">Letina</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sales Driver</string>
    <string name="nav_header_subtitle">neelamtea99@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Save Expense</string>
    <string name="menu_order">Add Order</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="attendance_mangement">Attendance</string>
    <string name="add_and_view_call">Add and \n View Call</string>
    <string name="expense_n_management">Expense \n Management</string>
    <string name="sync_offline_n_data">Sync offline \n  Data</string>
    <string name="title_activity_attendance_mangement">Attendance Mangement</string>
    <string name="tab_text_1">ADD ATTENDANCE</string>
    <string name="tab_text_2">VIEW ATTENDANCE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="press_to_punch_in">Press to punch in</string>
    <string name="punch_in">Punch in</string>
    <string name="press_to_punch_out">Press to punch out</string>
    <string name="punch_out">Punch out</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="json_login">https://letinaapp.in/geotracking/api/new_login.php</string>
    <string name="json_punch_in">https://letinaapp.in/geotracking/api/punch_in.php</string>
    <string name="json_punch_out">https://letinaapp.in/geotracking/api/punch_out.php</string>
    <string name="json_dealer_list">https://letinaapp.in/geotracking/api/dealer_list.php</string>
    <string name="json_add_retailer">https://letinaapp.in/geotracking/api/add_retailer.php</string>
    <string name="json_stock_report">https://letinaapp.in/geotracking/api/stock_report.php</string>
    <string name="json_complaint">https://letinaapp.in/geotracking/api/complaint.php</string>
    <string name="json_dealer_payment">https://letinaapp.in/geotracking/api/dealer_payment.php</string>
    <string name="json_dealer_complete_payment">https://letinaapp.in/geotracking/api/complete_payment.php</string>
    <string name="json_dealer_collect_payment">https://letinaapp.in/geotracking/api/collect_payment.php</string>
    <string name="json_state">https://letinaapp.in/geotracking/api/state.php</string>
    <string name="json_add_route">https://letinaapp.in/geotracking/api/add_route.php</string>
    <string name="json_city">https://letinaapp.in/geotracking/api/city.php</string>
    <string name="json_all_city">https://letinaapp.in/geotracking/api/all_city.php</string>
    <string name="json_expenses_type">https://letinaapp.in/geotracking/api/expenses_name.php</string>
    <string name="json_transport">https://letinaapp.in/geotracking/api/transport.php</string>
    <string name="json_all_transport">https://letinaapp.in/geotracking/api/all_transport.php</string>
    <string name="json_employe_expenses">https://letinaapp.in/geotracking/api/employe_expenses.php</string>
    <string name="json_dealer_servey">https://letinaapp.in/geotracking/api/dealer_servey.php</string>
    <string name="json_attendance_list">https://letinaapp.in/geotracking/api/attendance_list.php</string>
    <string name="json_punch_attendance_management">https://letinaapp.in/geotracking/api/attendance_management.php</string>
    <string name="json_punch_lat_long">https://letinaapp.in/geotracking/api/lat_long.php</string>
    <string name="json_designation">https://letinaapp.in/geotracking/api/designation.php</string>
    <string name="json_child_employeee">https://letinaapp.in/geotracking/api/child_emp.php</string>
    <string name="json_child_salesReport">https://letinaapp.in/geotracking/api/sales_report.php</string>
    <string name="json_gps_enabled">https://letinaapp.in/geotracking/api/enable_gps.php</string>
    <string name="json_gps_disabled">https://letinaapp.in/geotracking/api/disable_gps.php</string>
    <string name="json_add_daily_report">https://letinaapp.in/geotracking/api/add_daily_report.php</string>
    <string name="json_add_daily_expense">https://letinaapp.in/geotracking/api/add_expense.php</string>
    <string name="json_view_daily_expense">https://letinaapp.in/geotracking/api/fetch_expense.php</string>
    <string name="json_view_daily_report">https://letinaapp.in/geotracking/api/fetch_daily_report.php</string>
    <string name="json_edit_expense">https://letinaapp.in/geotracking/api/edit_expense.php</string>
    <string name="json_edit_daily_report">https://letinaapp.in/geotracking/api/edit_daily_report.php</string>
    <string name="json_d_dealer_list">https://letinaapp.in/geotracking/api/d_dealer_list.php</string>
    <string name="json_add_dealer">https://letinaapp.in/geotracking/api/add_dealer.php</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_saveex">Expense</string>
    <string name="save">Save</string>
    <string name="date">DD-MM-YYYY</string>
    <string name="expense">Expense</string>
    <string name="expense_name">Expense Name</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="document">Select Document</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="dealers">Dealers</string>
    <string name="categories">Categories</string>
    <string name="order">Add Order</string>
    <string name="title_activity_add_order">Add Order</string>
    <string name="product">Product</string>
    <string name="title_activity_order_sc_new">Add Order</string>
    <string name="json_login_apns_device">https://letinaapp.in/geotracking/api/apns_device.php</string>
    <string name="json_category_list">https://letinaapp.in/geotracking/api/category_list.php</string>
    <string name="json_dealers_stock_list">https://letinaapp.in/geotracking/api/dealer_stock_report.php</string>
    <string name="json_route_list">https://letinaapp.in/geotracking/api/route.php</string>
    <string name="json_retailer_list">https://letinaapp.in/geotracking/api/retailer.php</string>
    <string name="json_retailer_list_new">https://letinaapp.in/geotracking/api/retailer_by_route.php</string>
    <string name="json_my_schedule">https://192.168.1.101/neelamtea/neelam-tea/schedule.php</string>
    <string name="json_daily_sales_report">https://letinaapp.in/geotracking/api/daily_sales_report.php</string>
    <string name="json_my_start">https://letinaapp.in/geotracking/api/start_schedule.php</string>
    <string name="json_my_start_new">https://letinaapp.in/geotracking/api/start_schedule_new.php</string>
    <string name="json_get_emp">https://letinaapp.in/geotracking/api/get_emp.php</string>
    <string name="json_my_stop">https://letinaapp.in/geotracking/api/end_schedule.php</string>
    <string name="json_my_get_order_list">https://letinaapp.in/geotracking/api/get_order_list.php</string>
    <string name="json_notification">https://letinaapp.in/geotracking/api/notification.php</string>
    <string name="json_total_notification">https://letinaapp.in/geotracking/api/get_notification_count.php</string>
    <string name="json_get_all_catalouge">https://letinaapp.in/geotracking/api/get_all_catlog.php</string>
    <string name="pendingLeavesList">https://letinaapp.in/geotracking/api/pending_leaves.php</string>
    <string name="activecomplaintList">https://letinaapp.in/geotracking/api/active_complaint.php</string>
    <string name="resolvecomplaintList">https://letinaapp.in/geotracking/api/resolved_complaint.php</string>
    <string name="rejectedLeavesList">https://letinaapp.in/geotracking/api/rejected_leaves.php</string>
    <string name="acceptedList">https://letinaapp.in/geotracking/api/accepted_leaves.php</string>
    <string name="title_activity_live_report">Leave Apply</string>
    <string name="livereport">Leave Apply</string>
    <string name="title_activity_your_histry">View Order</string>
    <string name="menu_yourhistry">View Order</string>
    <string name="reason">Reason</string>
    <string name="json_leave_report">https://letinaapp.in/geotracking/api/leaves.php</string>
    <string name="json_place_order">https://letinaapp.in/geotracking/api/place_order.php</string>
    <string name="json_retailer_place_order">https://letinaapp.in/geotracking/api/place_retailer_order.php</string>
    <string name="json_npc">https://letinaapp.in/geotracking/api/npc.php</string>
    <string name="json_stock">https://letinaapp.in/geotracking/api/stock.php</string>
    <string name="town_work">TOWN WORK</string>
    <string name="party_s_name">Party\'s Name</string>
    <string name="con_person_mobile">Con.Person/ Mobile</string>
    <string name="main_agency">Main Agency</string>
    <string name="area_covered">Area Covered</string>
    <string name="godown">Godown</string>
    <string name="vehicle">Vehicle</string>
    <string name="reply_with_detail">Reply - With Detail</string>
    <string name="remarks_if_any">Remarks If Any</string>
    <string name="dealer_serve_report">Dealer Survey Report</string>
    <string name="my_schedule">My Schedule</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="browse">Browse</string>
    <string name="transport">Transport</string>
    <string name="other">Other</string>
    <string name="food_bil">Food Bill</string>
    <string name="public_transport">Public Transport</string>
    <string name="title_activity_my_schedule">My Schedule</string>
    <string name="title_activity_dealer_payment">Dealer Payment</string>
    <string name="dealer_payment">Dealer Payment</string>
    <string name="daily_activity_report">Daily Activity Report</string>
    <string name="title_activity_daily_report">Daily Activity Report</string>
    <string name="title_activity_dealer_visit">Dealer Visit</string>
    <string name="dealer_visit">Dealer Visit</string>
    <string name="round_figure">Round Figure</string>
    <string name="submit">Submit</string>
    <string name="message">Message</string>
    <string name="complaint">Add Complaint</string>
    <string name="leave_report">Leave Report</string>
    <string name="designation">Designation</string>
    <string name="designationemp">Designation of Employee</string>
    <string name="salesreport">Sales Report</string>
    <string name="dealer_stock">Dealer Stock</string>
    <string name="route">Route</string>
    <string name="retailer">Retailer</string>
    <string name="notification">Notification</string>
    <string name="address">Address</string>
    <string name="retailer_name">Retailer Name</string>
    <string name="shop_name">Shop Name</string>
    <string name="sales_report">Sales Report</string>
    <string name="add_new_dealer">Add New Dealer</string>
    <string name="view_expenses">View Expenses</string>
    <string name="view_sales_report">View Sales Report</string>
    <string name="title_view_complaint">View Complaint</string>
    <string name="add_daily_expense">Add Daily Expense</string>
    <string name="apply_livereport">Apply for leave</string>
</resources>