<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DealerServeReportActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="always">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_8sdp">
            <gr.escsoft.michaelprimez.searchablespinner.SearchableSpinner
                android:id="@+id/sp_state"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edit_text_design"
                android:layout_marginTop="10dp"
                android:paddingLeft="@dimen/_5sdp"
                app:SearchHintText="@string/state"
                app:RevealEmptyText="@string/state"
                />
            <gr.escsoft.michaelprimez.searchablespinner.SearchableSpinner
                android:id="@+id/sp_city"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edit_text_design"
                android:layout_marginTop="10dp"
                android:paddingLeft="@dimen/_5sdp"
                app:SearchHintText="@string/city"
                app:RevealEmptyText="@string/city"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_town_work"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edit_text_design"
                android:inputType="text"
                android:padding="5dp"
                android:visibility="gone"
                android:hint="@string/town_work" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_party_s_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edit_text_design"
                android:inputType="text"
                android:padding="5dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/party_s_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_con_person_mobile"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edit_text_design"
                android:inputType="number"
                android:padding="5dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/con_person_mobile" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_main_agency"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edit_text_design"
                android:inputType="text"
                android:padding="5dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/main_agency" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_area_covered"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edit_text_design"
                android:inputType="text"
                android:padding="5dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/area_covered" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_godown"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edit_text_design"
                android:inputType="number"
                android:padding="5dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/godown" />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_vehicle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edit_text_design"
                android:inputType="number"
                android:padding="5dp"

                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/vehicle" />



            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_reply_with_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_design"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="5"
                android:gravity="start"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/reply_with_detail"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_remarks_if_any"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_design"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="5"
                android:padding="@dimen/_5sdp"
                android:gravity="start"
                android:hint="@string/remarks_if_any"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_design"
                android:textColor="#ffffff"
                android:text="@string/save"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</LinearLayout>