<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.LeaveReportActivity"
    tools:showIn="@layout/activity_live_report">
    <!--<com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/edit_text_design"
        android:layout_margin="@dimen/_5sdp"
        app:hintText="@string/dealers"/>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Frome"
        android:padding="@dimen/_2sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_minus5sdp"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_date_frome"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/edit_text_design"
        android:editable="false"
        android:focusable="false"
        android:inputType="none"
        android:drawableRight="@drawable/calendar"
        android:padding="@dimen/_5sdp"
        android:layout_margin="@dimen/_5sdp"
        android:hint="@string/date"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="To"
        android:padding="@dimen/_2sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_minus5sdp"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_date_to"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/edit_text_design"

        android:editable="false"
        android:focusable="false"
        android:inputType="none"
        android:drawableRight="@drawable/calendar"
        android:padding="@dimen/_5sdp"
        android:layout_margin="@dimen/_5sdp"
        android:hint="@string/date"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/edit_text_design"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="7"
        android:gravity="start"
        android:hint="@string/reason"
        android:padding="@dimen/_5sdp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_leave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_margin="@dimen/_5sdp"
        android:elevation="@dimen/_4sdp"
        android:textSize="@dimen/_15sdp"
        android:background="@drawable/button_design"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:text="@string/save"
        />
</LinearLayout>